--- a/MyCProgram/HTML/JQuery/格式处理/sample.html
+++ b/MyCProgram/HTML/JQuery/格式处理/sample.html
@@ -14,88 +14,88 @@
   
   
   
-        \\[Description("PAL")]
-  $("#info").append("        VIDEOSTANDARD_PAL" + ETGetFrameRate(0x00000001) + "<br />");       //PAL size:720*576 f/s : 25
-        \\[Description("NTSC_2997")]
-  $("#info").append("        VIDEOSTANDARD_NTSC_2997" + ETGetFrameRate(0x00000002) + "<br />");     //NTSC size:720*486  f/s : 29.97
-        \\[Description("NTSC_30")]
-  $("#info").append("        VIDEOSTANDARD_NTSC_30" + ETGetFrameRate(0x00000004) + "<br />");       //NTSC size:720*486 f/s : 30 
-        \\[Description("SECAM")]
-  $("#info").append("        VIDEOSTANDARD_SECAM" + ETGetFrameRate(0x00000008) + "<br />");     //SECAM
+        // [Description("PAL")]
+  $("#info").append("        VIDEOSTANDARD_PAL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000001) + "<br />");       //PAL size:720*576 f/s : 25
+        //[Description("NTSC_2997")]
+  $("#info").append("        VIDEOSTANDARD_NTSC_2997&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000002) + "<br />");     //NTSC size:720*486  f/s : 29.97
+        //[Description("NTSC_30")]
+  $("#info").append("        VIDEOSTANDARD_NTSC_30&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000004) + "<br />");       //NTSC size:720*486 f/s : 30 
+        //[Description("SECAM")]
+  $("#info").append("        VIDEOSTANDARD_SECAM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000008) + "<br />");     //SECAM
 
-        \\[Description("1920_1080_50i")]
-  $("#info").append("        VIDEOSTANDARD_1920_1080_50i" + ETGetFrameRate(0x00000010) + "<br />");     //HDTV size:1920*1080 f/s : 25  interlaced PAL
-        \\[Description("1920_1080_5994i")]
-  $("#info").append("        VIDEOSTANDARD_1920_1080_5994i" + ETGetFrameRate(0x00000020) + "<br />");       //HDTV size:1920*1080 f/s : 29.97 interlaced NTSC
-        \\[Description("1920_1080_60i")]
-  $("#info").append("        VIDEOSTANDARD_1920_1080_60i" + ETGetFrameRate(0x00000040) + "<br />");     //HDTV size:1920*1080 f/s : 30 interlaced NTSC
+        //[Description("1920_1080_50i")]
+  $("#info").append("        VIDEOSTANDARD_1920_1080_50i&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000010) + "<br />");     //HDTV size:1920*1080 f/s : 25  interlaced PAL
+        //[Description("1920_1080_5994i")]
+  $("#info").append("        VIDEOSTANDARD_1920_1080_5994i&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000020) + "<br />");       //HDTV size:1920*1080 f/s : 29.97 interlaced NTSC
+        //[Description("1920_1080_60i")]
+  $("#info").append("        VIDEOSTANDARD_1920_1080_60i&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000040) + "<br />");     //HDTV size:1920*1080 f/s : 30 interlaced NTSC
 
-        \\[Description("1920_1080_2398p")]
-  $("#info").append("        VIDEOSTANDARD_1920_1080_2398p" + ETGetFrameRate(0x00000080) + "<br />");       //HDTV size:1920*1080 f/s : 23.98 progressive PAL 
-        \\[Description("1920_1080_24p")]
-  $("#info").append("        VIDEOSTANDARD_1920_1080_24p" + ETGetFrameRate(0x00000100) + "<br />");     //HDTV size:1920*1080 f/s : 24 progressive PAL
-        \\[Description("1920_1080_25p")]
-  $("#info").append("        VIDEOSTANDARD_1920_1080_25p" + ETGetFrameRate(0x00000200) + "<br />");     //HDTV size:1920*1080 f/s : 25 progressive PAL
-        \\[Description("1920_1080_2997p")]
-  $("#info").append("        VIDEOSTANDARD_1920_1080_2997p" + ETGetFrameRate(0x00000400) + "<br />");       //HDTV size:1920*1080 f/s : 29.97 progressive NTSC
-        \\[Description("1920_1080_30p")]
-  $("#info").append("        VIDEOSTANDARD_1920_1080_30p" + ETGetFrameRate(0x00000800) + "<br />");     //HDTV size:1920*1080 f/s : 30 progressive NTSC
+        //[Description("1920_1080_2398p")]
+  $("#info").append("        VIDEOSTANDARD_1920_1080_2398p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000080) + "<br />");       //HDTV size:1920*1080 f/s : 23.98 progressive PAL 
+        //[Description("1920_1080_24p")]
+  $("#info").append("        VIDEOSTANDARD_1920_1080_24p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000100) + "<br />");     //HDTV size:1920*1080 f/s : 24 progressive PAL
+        //[Description("1920_1080_25p")]
+  $("#info").append("        VIDEOSTANDARD_1920_1080_25p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000200) + "<br />");     //HDTV size:1920*1080 f/s : 25 progressive PAL
+        //[Description("1920_1080_2997p")]
+  $("#info").append("        VIDEOSTANDARD_1920_1080_2997p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000400) + "<br />");       //HDTV size:1920*1080 f/s : 29.97 progressive NTSC
+        //[Description("1920_1080_30p")]
+  $("#info").append("        VIDEOSTANDARD_1920_1080_30p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00000800) + "<br />");     //HDTV size:1920*1080 f/s : 30 progressive NTSC
 
-        \\[Description("1280_720_2398p")]
-  $("#info").append("        VIDEOSTANDARD_1280_720_2398p" + ETGetFrameRate(0x00001000) + "<br />");        //HDTV size:1280*720 f/s : 23.98 progressive PAL
-        \\[Description("1280_720_24p")]
-  $("#info").append("        VIDEOSTANDARD_1280_720_24p" + ETGetFrameRate(0x00002000) + "<br />");      //HDTV size:1280*720 f/s : 24 progressive PAL
-        \\[Description("1280_720_50p")]
-  $("#info").append("        VIDEOSTANDARD_1280_720_50p" + ETGetFrameRate(0x00004000) + "<br />");      //HDTV size:1280*720 f/s : 50 progressive PAL
-        \\[Description("1280_720_5994p")]
-  $("#info").append("        VIDEOSTANDARD_1280_720_5994p" + ETGetFrameRate(0x00008000) + "<br />");        //HDTV size:1280*720 f/s : 59.94 progressive NTSC
+        //[Description("1280_720_2398p")]
+  $("#info").append("        VIDEOSTANDARD_1280_720_2398p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00001000) + "<br />");        //HDTV size:1280*720 f/s : 23.98 progressive PAL
+        //[Description("1280_720_24p")]
+  $("#info").append("        VIDEOSTANDARD_1280_720_24p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00002000) + "<br />");      //HDTV size:1280*720 f/s : 24 progressive PAL
+        //[Description("1280_720_50p")]
+  $("#info").append("        VIDEOSTANDARD_1280_720_50p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00004000) + "<br />");      //HDTV size:1280*720 f/s : 50 progressive PAL
+        //[Description("1280_720_5994p")]
+  $("#info").append("        VIDEOSTANDARD_1280_720_5994p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00008000) + "<br />");        //HDTV size:1280*720 f/s : 59.94 progressive NTSC
 
-        \\[Description("1440_1080_50i")]
-  $("#info").append("        VIDEOSTANDARD_1440_1080_50i" + ETGetFrameRate(0x00010000) + "<br />");     //HD  size:1440*1080 f/s : 25 interlaced PAL
-        \\[Description("1440_1080_5994i")]
-  $("#info").append("        VIDEOSTANDARD_1440_1080_5994i" + ETGetFrameRate(0x00020000) + "<br />");       //HD  size:1440*1080 f/s : 29.97 interlaced NTSC
-        \\[Description("1440_1080_60i")]
-  $("#info").append("        VIDEOSTANDARD_1440_1080_60i" + ETGetFrameRate(0x00040000) + "<br />");     //HD  size:1440*1080 f/s : 30 interlaced     NTSC
+        //[Description("1440_1080_50i")]
+  $("#info").append("        VIDEOSTANDARD_1440_1080_50i&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00010000) + "<br />");     //HD  size:1440*1080 f/s : 25 interlaced PAL
+        //[Description("1440_1080_5994i")]
+  $("#info").append("        VIDEOSTANDARD_1440_1080_5994i&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00020000) + "<br />");       //HD  size:1440*1080 f/s : 29.97 interlaced NTSC
+        //[Description("1440_1080_60i")]
+  $("#info").append("        VIDEOSTANDARD_1440_1080_60i&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00040000) + "<br />");     //HD  size:1440*1080 f/s : 30 interlaced     NTSC
 
-        \\[Description("PAL_16_9")]
-  $("#info").append("        VIDEOSTANDARD_PAL_16_9" + ETGetFrameRate(0x00080000) + "<br />");      //PAL size:720*576 f/s : 25  
-        \\[Description("NTSC_2997_16_9")]
-  $("#info").append("        VIDEOSTANDARD_NTSC_2997_16_9" + ETGetFrameRate(0x00100000) + "<br />");        //NTSC size:720*486  f/s : 29.97
-        \\[Description("NTSC_30_16_9")]
-  $("#info").append("        VIDEOSTANDARD_NTSC_30_16_9" + ETGetFrameRate(0x00200000) + "<br />");      //NTSC size:720*486 f/s : 30 
-        \\[Description("NTSC_2997_480")]
-  $("#info").append("        VIDEOSTANDARD_NTSC_2997_480" + ETGetFrameRate(0x00400000) + "<br />");     //NTSC size:720*480  f/s : 29.97  //先留着，防止以后特殊情况再改成480
-        \\[Description("NTSC_30_480")]
-  $("#info").append("        VIDEOSTANDARD_NTSC_30_480" + ETGetFrameRate(0x00800000) + "<br />");       //NTSC size:720*480 f/s : 30 //先留着，防止以后特殊情况再改成480
+        //[Description("PAL_16_9")]
+  $("#info").append("        VIDEOSTANDARD_PAL_16_9&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00080000) + "<br />");      //PAL size:720*576 f/s : 25  
+        //[Description("NTSC_2997_16_9")]
+  $("#info").append("        VIDEOSTANDARD_NTSC_2997_16_9&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00100000) + "<br />");        //NTSC size:720*486  f/s : 29.97
+        //[Description("NTSC_30_16_9")]
+  $("#info").append("        VIDEOSTANDARD_NTSC_30_16_9&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00200000) + "<br />");      //NTSC size:720*486 f/s : 30 
+        //[Description("NTSC_2997_480")]
+  $("#info").append("        VIDEOSTANDARD_NTSC_2997_480&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00400000) + "<br />");     //NTSC size:720*480  f/s : 29.97  //先留着，防止以后特殊情况再改成480
+        //[Description("NTSC_30_480")]
+  $("#info").append("        VIDEOSTANDARD_NTSC_30_480&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x00800000) + "<br />");       //NTSC size:720*480 f/s : 30 //先留着，防止以后特殊情况再改成480
 
         //2010/0927 wfg added
-        \\[Description("1280_1080_50i")]
-  $("#info").append("        VIDEOSTANDARD_1280_1080_50i" + ETGetFrameRate(0x01000000) + "<br />");     //HD  size:1280*1080 f/s : 25 interlaced
-        \\[Description("1280_1080_5994i")]
-  $("#info").append("        VIDEOSTANDARD_1280_1080_5994i" + ETGetFrameRate(0x02000000) + "<br />");     //HD  size:1280*1080 f/s : 29.97 interlaced
-        \\[Description("1280_1080_60i")]
-  $("#info").append("        VIDEOSTANDARD_1280_1080_60i" + ETGetFrameRate(0x04000000) + "<br />");     //HD  size:1280*1080 f/s : 30 interlaced
+        //[Description("1280_1080_50i")]
+  $("#info").append("        VIDEOSTANDARD_1280_1080_50i&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x01000000) + "<br />");     //HD  size:1280*1080 f/s : 25 interlaced
+        //[Description("1280_1080_5994i")]
+  $("#info").append("        VIDEOSTANDARD_1280_1080_5994i&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x02000000) + "<br />");     //HD  size:1280*1080 f/s : 29.97 interlaced
+        //[Description("1280_1080_60i")]
+  $("#info").append("        VIDEOSTANDARD_1280_1080_60i&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x04000000) + "<br />");     //HD  size:1280*1080 f/s : 30 interlaced
 
 
         //addby hzr for GEN2 20160628 新增加的制式
-  $("#info").append("        ET_VIDEOSTANDARD_PAL_25P" + ETGetFrameRate(0x10001000) + "<br />");      //PAL size:720*576 f/s : 25
-  $("#info").append("        ET_VIDEOSTANDARD_PAL_25P_16_9" + ETGetFrameRate(0x10004000) + "<br />");
-  $("#info").append("        ET_VIDEOSTANDARD_PAL_50P" + ETGetFrameRate(0x10000100) + "<br />");      //PAL size:720*576 f/s : 50
-  $("#info").append("        ET_VIDEOSTANDARD_PAL_50P_16_9" + ETGetFrameRate(0x10000400) + "<br />");
-  $("#info").append("        ET_VIDEOSTANDARD_1440_1080_50p" + ETGetFrameRate(0x10000010) + "<br />");     //
-  $("#info").append("        ET_VIDEOSTANDARD_1440_1080_25p" + ETGetFrameRate(0x10000040) + "<br />");     //
-  $("#info").append("        ET_VIDEOSTANDARD_1920_1080_50p" + ETGetFrameRate(0x10000004) + "<br />");      //
-  $("#info").append("        ET_VideoStandard_1920_1080_5994p" + ETGetFrameRate(0x10000008) + "<br />");     //
-  $("#info").append("        ET_VideoStandard_1440_1080_5994p" + ETGetFrameRate(0x10000020) + "<br />");       //
-  $("#info").append("        ET_VideoStandard_1440_1080_2997p" + ETGetFrameRate(0x10000080) + "<br />");       //
-  $("#info").append("        ET_VideoStandard_NTSC_5994P" + ETGetFrameRate(0x10000200) + "<br />");       //NTSC size:720*486  f/s : 29.97
-  $("#info").append("        ET_VideoStandard_NTSC_5994P_16_9" + ETGetFrameRate(0x10000800) + "<br />");
-  $("#info").append("        ET_VideoStandard_NTSC_2997P" + ETGetFrameRate(0x10002000) + "<br />");       //NTSC size:720*486  f/s : 29.97
-  $("#info").append("        ET_VideoStandard_NTSC_2997P_16_9" + ETGetFrameRate(0x10008000) + "<br />");
-  $("#info").append("        ET_VideoStandard_1280_720_2997pex" + ETGetFrameRate(0x10000002) + "<br />");      //
-  $("#info").append("        ET_VIDEOSTANDARD_1280_720_25p" + ETGetFrameRate(0x10000001) + "<br />");      //
+  $("#info").append("        ET_VIDEOSTANDARD_PAL_25P&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10001000) + "<br />");      //PAL size:720*576 f/s : 25
+  $("#info").append("        ET_VIDEOSTANDARD_PAL_25P_16_9&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10004000) + "<br />");
+  $("#info").append("        ET_VIDEOSTANDARD_PAL_50P&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000100) + "<br />");      //PAL size:720*576 f/s : 50
+  $("#info").append("        ET_VIDEOSTANDARD_PAL_50P_16_9&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000400) + "<br />");
+  $("#info").append("        ET_VIDEOSTANDARD_1440_1080_50p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000010) + "<br />");     //
+  $("#info").append("        ET_VIDEOSTANDARD_1440_1080_25p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000040) + "<br />");     //
+  $("#info").append("        ET_VIDEOSTANDARD_1920_1080_50p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000004) + "<br />");      //
+  $("#info").append("        ET_VideoStandard_1920_1080_5994p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000008) + "<br />");     //
+  $("#info").append("        ET_VideoStandard_1440_1080_5994p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000020) + "<br />");       //
+  $("#info").append("        ET_VideoStandard_1440_1080_2997p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000080) + "<br />");       //
+  $("#info").append("        ET_VideoStandard_NTSC_5994P&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000200) + "<br />");       //NTSC size:720*486  f/s : 29.97
+  $("#info").append("        ET_VideoStandard_NTSC_5994P_16_9&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000800) + "<br />");
+  $("#info").append("        ET_VideoStandard_NTSC_2997P&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10002000) + "<br />");       //NTSC size:720*486  f/s : 29.97
+  $("#info").append("        ET_VideoStandard_NTSC_2997P_16_9&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10008000) + "<br />");
+  $("#info").append("        ET_VideoStandard_1280_720_2997pex&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000002) + "<br />");      //
+  $("#info").append("        ET_VIDEOSTANDARD_1280_720_25p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x10000001) + "<br />");      //
 
-  $("#info").append("        VIDEOSTANDARD_1920_1080_5994p" + ETGetFrameRate(0x49411082) + "<br />");  //
+  $("#info").append("        VIDEOSTANDARD_1920_1080_5994p&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +    ETGetFrameRate(0x49411082) + "<br />");  //
         console.log("end...");
 
     });
